Wrap wp_editor()'s in metaboxes on activity edit screens. Fixes #3832.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5493 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-activity/admin/css/admin.dev.css
+++ b/bp-activity/admin/css/admin.dev.css
@@ -31,9 +31,6 @@
 	margin-top: 1px;
 }
 
-#wp-bp-activities-content-wrap {
-	margin-top: 20px;
-}
 #post-body #bp-activities-action_resize,
 #post-body #bp-activities-content_resize {
 	position: inherit;
